[package]
name = "dungeon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"
bevy_common_assets = "0.8.0"
bevy_pixel_camera = "0.12.1"
chrono = "0.4.31"
rand = "0.8.5"
serde = "1.0.193"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
